new/edit/delete pet/appt update instantly, signup error handling, new/edit appt include endtimes & time lengths for ea reason
